programming-language/workspace/compiler/tests/fixtures/invalid/wrong_argument_count.cb64
# Wrong number of arguments
def add(a: byte, b: byte) -> byte:
    return a + b

def main():
    x: byte = add(1)
